--- a/2017.09.08/table.html
+++ b/2017.09.08/table.html
@@ -1,5 +1,8 @@
-<table border>
-		<caption>시간표</caption>
+<html>
+	<table border = 1> 
+	<!-- border 이 있어야 칸막이가 생긴다.-->
+	<!-- <tr>은 행을 <th>는 헤더를 <td>는 데이터를 의미한다 -->
+		<caption> 시간표 </caption>
 		<tr>
 			<th>시간</th>
 			<th>월요일</th>
@@ -20,13 +23,14 @@
 			<td>2</td>
 			<td> </td>
 			<td rowspan =2>논리회로및실습</td>
+
 			<td> </td>
 			<td rowspan =3>유닉스프로그래밍</td>
 		</tr>
 		<tr>
 			<td>3</td>
 			<td rowspan =2>자료구조</td>
-			<td>자료구조</td>>
+			<td>자료구조</td>
 		</tr>
 		<tr>
 			<td>4</td>
@@ -78,3 +82,4 @@
 			<td> </td>
 		</tr>
 	</table>
+</html>
