--- a/2017.09.08/fruitshop/fruitshop.html
+++ b/2017.09.08/fruitshop/fruitshop.html
@@ -2,7 +2,7 @@
 	<body>
 		<form name=fruit method=post action="fruitdata.php">
 			submit money what u want<br>
-			price : <input type="text" name="price" value=" "><br>
+			price : <input type="text" name="price"><br>
 			<input type="submit" value="search">
 		</form> 
 	</body>
