--- a/2017.09.15/score/score.html
+++ b/2017.09.15/score/score.html
@@ -1,1 +1,8 @@
 <html>
+  <body>
+    <form name="submit" method=post action="result.php">
+      input your score : <input type="text" name="score">
+      <input type="submit" value="search">
+    </form>
+  </body>
+</html>
