--- a/input.html
+++ b/input.html
@@ -3,5 +3,8 @@
   </head>
   <body>
     <form method=post action="output.php">
+      <input type="text" name="text">
+      <input type="submit" value="enter">
+    </form>
   </body>
 </html>
