--- a/2017.09.29/3typegame/game.html
+++ b/2017.09.29/3typegame/game.html
@@ -1,1 +1,11 @@
-
+<html>
+	<head>
+		<title> random game </title>
+	</head>
+	<body>
+		<form name=random method=POST action="result.php">
+			input your type here : <input type="text" name="type"><br>
+			<input type="submit" value="show result">	
+		</form>		
+	</body>
+</html>
